3.5
	+ Set gidNumber based on RID for new groups
	+ Set gidNumber to Domain Users and Domain Admin for NSS + PAM
	+ Change default group container to cn=Users as Windows does
	+ Include PAM + NSS services with SSSd to authenticate LDB users
	  in the system
	+ Use samba instead of slapd + heimdal
	+ New EBox::Module::LDAP replacing EBox::LdapModule and using
	  EBox::Module::Service as base class, schemas are now loaded
	  in _regenConfig instead of manually in enableActions
	+ Fix domain controllers shown on the computers OU in Manage model
	+ Using paged serch in EBox::Users::users() method
	+ Added EBox::LDAPBase::pagedSearch method
	+ Added support for addon components when user is in a
	  non-standard OU
	+ Better control for edit user quota
	+ Sent zentyal-usercorner trigger on install / upgrade to restart it if
	  it's installed
	+ Avoid apparmor errors in trusty
	+ Set version to 3.5
	+ Fixed bug when altering mail address through the edit user form
	+ Better integration between mail addon and mail field
	+ Remove method canonicalName and use object DNs for greater performance
	+ Migrate previous configuration from 3.3 when upgrading
3.4
	+ Updated EBox::Users::Model::Password to use
	  EBox::Usercorner::updateSessionPassword method and the new samba
	  location
	+ Stop changing users and contacts' cn field on object edition, allowed to
	  edit the displayName field, just as Windows does
	+ Disable OpenLDAP users sync in favor of Samba AD replication
	+ Avoid warning when checking whether we are in the usercorner
	+ Updated to use Plack / PSGI instead of mod_perl
	+ Updated to use the new haproxy API
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Fixed soap.conf for apache 2.4
	+ Depend on apache2-utils, required to run htpasswd
	+ Set version to 3.4
	+ Add script to update the credentials when mode is external AD
	+ Added and used checkMailNotInUse method
	+ Updated cloud sync to ignore any change done in cloud to internal users